--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GDRIVE_CLIENT_ID=your_client_id_here
-GDRIVE_CLIENT_SECRET=your_client_secret_here
+GDRIVE_CLIENT_ID=63600040547-pbep78fp8476pbmblf0eh14p8v0s3lfb.apps.googleusercontent.com
+GDRIVE_CLIENT_SECRET=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
